--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^6.29.0",
     "react-toastify": "^11.0.2"
   },
   "devDependencies": {
